# Doodling

./: .dockerignore  .gitignore  Dockerfile  README-database.md  README.md  compose.yaml  setup_canvas_asset.sh
Database/: init.surql
DoodlingCanvas/: Cargo.toml  index.html
DoodlingCanvas/src/: brush.rs  canvas_shader.wgsl  lib.rs  main.rs  render_shader.wgsl  render_state.rs  shader.wgsl  utils.rs  winit_app.rs
DoodlingServer/: .env  .gitignore  Cargo.toml  Dockerfile  REAMDE.md
DoodlingServer/DoodlingHtmx/: create-doodle.html  index.html  input.css
DoodlingServer/DoodlingHtmx/resources/: create-doodle.html  home.html  index.html  output.css  recent-doodles.html
DoodlingServer/DoodlingHtmx/resources/canvas/: DoodlingCanvas.d.ts  DoodlingCanvas.js  DoodlingCanvas_bg.wasm  DoodlingCanvas_bg.wasm.d.ts  index.html  package.json
DoodlingServer/DoodlingHtmx/templates/: doodle_list.html
DoodlingServer/src/: main.rs
DoodlingServer/src/middleware/: database_layer.rs  mod.rs
DoodlingServer/src/model/: mod.rs
DoodlingServer/src/services/: doodle_service.rs  mod.rs
DoodlingServer/src/templates/: mod.rs
DoolingHtmx/: create-doodle.html  index.html  recent-doodles.html
