[package]
name = "DoodlingCanvas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.3"
bytemuck = { version = "1.13.1", features = ["derive"] }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
env_logger = "0.10.0"
futures-intrusive = "0.5.0"
image = "0.24.7"
log = "0.4.20"
pollster = "0.3.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Document", "Window", "Element"] }
wgpu = { version = "0.20.0", features = ["webgl"] }
winit = "0.30.0"
