[package]
name = "DoodlingServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
dotenv = "0.15.0"
minijinja = "1.0.7"
serde = { version = "1.0.185", features = ["derive"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git"}
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
